promjena removeList