@@ -117,7 +117,7 @@ public class YuGiOhTournament {
 
             if (playersToPair.size() % 2 != 0) {
                 ArrayList<Player> playersToPairNoByes = playersToPair.stream().filter(x -> !x.gotBYE).sorted(new PointsComparator()).collect(Collectors.toCollection(ArrayList::new));
-                Player byePlayer = playersToPairNoByes.removeLast();
+                Player byePlayer = playersToPairNoByes.remove(playersToPairNoByes.size() - 1);
                 byePlayer.gotBYE = true;
                 byePlayer.updateScore("Win"); // BYE player gets a win
                 JOptionPane.showMessageDialog(roundFrame, byePlayer.name + " gets a BYE and wins this round!");
